--- a/.env
+++ b/.env
@@ -1,20 +1,20 @@
-SESSION_ID="PLEASE ADD YOUR SESSION HERE INCONNU~XD~"
+SESSION_ID="INCONNU~XD~GAM0DbgK#lPJrnhcoGu7n93bBtj9utdVNmiwDLLUP-RFNjD4KKDw"
 PREFIX=.
-OWNER_NUMBER=554488138425
+OWNER_NUMBER=50935449524
 SUDO_NUMBER=554488138425
-OWNER_NAME=INCONNU BOY
-AUTO_STATUS_SEEN=true
-AUTO_BIO=true
-AUTO_STATUS_REACT=true
+OWNER_NAME=RALPH 
+AUTO_STATUS_SEEN=false
+AUTO_BIO=false
+AUTO_STATUS_REACT=false
 AUTO_READ=false
 AUTO_RECORDING=false
 AUTO_REACT=false
 STATUS_READ_MSG=STATUS VIEWED BY INCONNU XD V2 ✅
 ANTILINK=false
-ANTIBOT=true
+ANTIBOT=false
 ANTIBOT_WARNINGS=3
 REJECT_CALL=false
-NOT_ALLOW=true
-AUTO_STATUS_REACT=true
+NOT_ALLOW=false
+AUTO_STATUS_REACT=false
 MODE=public
 WELCOME=false
